--- a/kalorienrechner+mehrwert/assets/css/styles.css
+++ b/kalorienrechner+mehrwert/assets/css/styles.css
@@ -19,7 +19,42 @@ input {
   width: 75%;
   margin: auto;
 }
+
 .grid {
   display: grid;
   grid-template-columns: 33% 33% 33%;
+}
+
+.kalorie p {
+  color: white;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.kalorie p:nth-of-type(1),
+.kalorie p:nth-of-type(2),
+.kalorie p:nth-of-type(3) {
+  background-color: darkgreen;
+}
+
+.kalorie p:nth-of-type(4),
+.kalorie p:nth-of-type(5),
+.kalorie p:nth-of-type(6),
+.kalorie p:nth-of-type(7),
+.kalorie p:nth-of-type(8),
+.kalorie p:nth-of-type(9) {
+  background-color: darkolivegreen;
+}
+.kalorie p:nth-of-type(1) {
+  border-top-left-radius: 10px;
+}
+.kalorie p:nth-of-type(3) {
+  border-top-right-radius: 10px;
+}
+.kalorie p:nth-of-type(7) {
+  border-bottom-left-radius: 10px;
+}
+.kalorie p:nth-of-type(9) {
+  border-bottom-right-radius: 10px;
 }
